# qfc

./: README.md  prepare_example_data.py  pyproject.toml  qfc.ipynb
benchmark/: benchmark_compression_level.py  benchmark_qfc_vs_qtc.py  models.py  run_benchmark_test.py
benchmark/results/: benchmark_compression_level.txt  benchmark_segment_length.txt
benchmarks/: benchmark_segment_length.py  benchmark_target_resid.py  prepare_real_example_data.py
benchmarks/results/: benchmark_qfc_vs_qtc.txt  benchmark_target_resid.txt
examples/: example1.py  example1_multi_segment.py  example1_qwc.py  example_000463.py  test_codec.py  zarr_example.py
qfc/: __init__.py  qfc_compress.py  qfc_multi_segment_compress.py
qfc/codecs/: QFCCodec.py  QTCCodec.py  QWCCodec.py  __init__.py
qfc/internal/: qfc_compress.py  qfc_multi_segment_compress.py  qtc_compress.py  qwc_compress.py  qwc_multi_segment_compress.py
qfc_dandi_benchmark/: qfc_dandi_benchmark.py
