[tool.poetry]
name = "qfc"
version = "0.3.4"
description = ""
authors = ["Jeremy Magland <jmagland@flatironinstitute.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numcodecs = "^0.12.1"
zstandard = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
